# KeyDock

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  Cargo.toml  README.md  README.zh-CN.md  index.html  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy-web.yml  release.yml
.omo/run-continuation/: ses_1771446edffe3pH6lfpc9wxm08.json  ses_177b35b53ffe9PtC6uo14rIQ0g.json  ses_177c45602ffeHudeGQKv4hlb0J.json  ses_1790e155effehzukLlpHeEg4Ki.json  ses_17c051e78ffegV3VQscSfSYpbh.json  ses_17c1690a0ffe0zb21jH3nLnJW4.json
.tauri/: key  key.pem.pub  key.pub
crates/keydock-cli/: Cargo.toml
crates/keydock-cli/src/: main.rs
crates/keydock-core/: Cargo.toml
crates/keydock-core/src/: crypto.rs  keychain.rs  lib.rs  models.rs  storage.rs  vault.rs
crates/keydock-core/src/storage/: audit.rs  keys.rs  mod.rs  presets.rs  schema.rs  secret_fields.rs  secrets.rs  shell.rs  workspaces.rs
docs/: BUSINESS_FLOW.md  NEXT_STEPS.md  NEXT_VERSION_PLAN.md  PRESET_GLOBAL_ENV_RESEARCH.md  PRODUCT_PLAN.md  ROADMAP.md  SECRET_ITEM_UX_OPTIMIZATION_PLAN.md  SECURITY_MODEL.md  optimization-plan.md
src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/audit/: AuditTab.tsx
src/components/dashboard/: DashboardTab.tsx  ShellIntegrationCard.tsx
src/components/layout/: LockScreen.tsx  Sidebar.tsx  ToastView.tsx
src/components/presets/: PresetDetails.tsx  PresetList.tsx  PresetsTab.tsx  RunCommandCard.tsx  TemplatePicker.tsx
src/components/secrets/: ApiKeyCard.tsx  ApiKeyForm.tsx  KeyCard.tsx  KeyForm.tsx  PresetGrid.tsx  SecretDetails.tsx  SecretFieldEditor.tsx  SecretFieldList.tsx  SecretFieldRow.tsx  SecretForm.tsx  SecretList.tsx  SecretsTab.tsx
src/components/settings/: SettingsTab.tsx
src/components/ui/: confirm-dialog.tsx  input.test.tsx  input.tsx  textarea.tsx
src/components/workspaces/: EnvExport.tsx  RunCommandCard.tsx  VariableList.tsx  VariableMapper.tsx  WorkspaceDetails.tsx  WorkspaceList.tsx  WorkspacesTab.tsx
src/hooks/: useApiKeys.ts  useAudit.ts  useClipboard.test.ts  useClipboard.ts  useFormValidation.test.tsx  useFormValidation.tsx  useKeys.ts  usePresetDetails.ts  usePresets.ts  useSecretFields.ts  useSecrets.ts  useShellIntegration.ts  useTheme.tsx  useToast.tsx  useUpdate.ts  useVariables.ts  useVault.ts  useWorkspaces.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  zh.json
src/lib/: env.ts  tauri.ts
web/: README.md  index.html  package.json
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx  styles.css
web/src/components/: FAQ.tsx  FAQItem.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navigation.tsx  Pricing.tsx  SecurityModel.tsx  SocialProof.tsx  UseCases.tsx
web/src/hooks/: useGitHubStats.ts  useScrollReveal.ts
