[workspace]
members = [
  "crates/keydock-core",
  "crates/keydock-cli",
  "src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/0xfig-labs/KeyDock"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
arboard = "3"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
