[package]
name = "keydock-app"
version = "0.6.0"
description = "Local API Key Vault and Env Presets for Developers"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "keydock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
arboard.workspace = true
serde_json.workspace = true
keydock-core = { path = "../crates/keydock-core" }
serde.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
notify = "7"
open = "5"
tauri-plugin-updater = "2"
