[package]
name = "keydock-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
dirs.workspace = true
keyring.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
